workspace1/I2S_AudioStream.cydsn/REBUILD.log
--------------- Rebuild Started: 03/10/2019 20:42:32 Project: main_cm4.c, Configuration: ARM GCC 5.4-2016-q2-update Release ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m4 -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -mthumb -I..\..\rnnoise\include -I. -IGenerated_Source\PSoC6 -IGenerated_Source\PSoC6\pdl\cmsis/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/ip/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/psoc63/include/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ -IGenerated_Source\PSoC6\pdl\middleware/ -Wa,-alh=.\CortexM4\ARM_GCC_541\Release/main_cm4.lst -g -D NDEBUG -D CY_CORE_ID=0 -D CY_PSOC_CREATOR_USED=1 -D CY8C6347FMI_BLD53 -Wall -ffunction-sections -ffat-lto-objects -Os -c main_cm4.c -o .\CortexM4\ARM_GCC_541\Release\main_cm4.o
main_cm4.c: In function 'main':
main_cm4.c:108:5: error: too few arguments to function 'Cy_SysClk_StartClkMeasurementCounters'
     Cy_SysClk_StartClkMeasurementCounters();
     ^
In file included from Generated_Source\PSoC6/project.h:22:0,
                 from main_cm4.c:15:
Generated_Source\PSoC6\pdl\drivers/peripheral/sysclk/cy_sysclk.h:1210:23: note: declared here
 cy_en_sysclk_status_t Cy_SysClk_StartClkMeasurementCounters(cy_en_meas_clks_t clock1, uint32_t count1, cy_en_meas_clks_t clock2);
                       ^
main_cm4.c:107:9: warning: unused variable 'a' [-Wunused-variable]
     int a = CY_SYSCLK_BAD_PARAM;
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 03/10/2019 20:42:36 ---------------
